--- a/src/app/components/main-chat/show-channel-member/open-send-prv-message-window/open-send-prv-message-window.component.html
+++ b/src/app/components/main-chat/show-channel-member/open-send-prv-message-window/open-send-prv-message-window.component.html
@@ -35,7 +35,7 @@
       <div class="emailBox">
         <img src="./assets/img/mail-icon.svg" />
         <div class="email">
-          <p>{{ "open-send-prv-message.adress" | translate }}</p>
+          <p>{{ "open-send-prv-message.address" | translate }}</p>
           <a href="mailto:wwweewefeff&#64;dede.de" target="_blank">{{
             i.email
           }}</a>
