--- a/src/app/components/main-login/login/login.component.html
+++ b/src/app/components/main-login/login/login.component.html
@@ -69,7 +69,7 @@
 
       <div class="separatorContainer">
         <div></div>
-        <span>{{ "login.midSeperator" | translate }}</span>
+        <span>{{ "login.midSeparator" | translate }}</span>
         <div></div>
       </div>
 
