--- a/src/app/components/main-login/password-forget/password-forget.component.html
+++ b/src/app/components/main-login/password-forget/password-forget.component.html
@@ -30,7 +30,7 @@
           id="email"
           name="email"
           type="email"
-          placeholder="{{ 'passwordForget.inputfield' | translate }}"
+          placeholder="{{ 'passwordForget.inputField' | translate }}"
           required
           [ngClass]="{ aktivInput: emailField.valid && emailField.touched }"
           pattern="[^@]+@[^.]+\..+"
