--- a/src/app/components/main-login/password-reset/password-reset.component.html
+++ b/src/app/components/main-login/password-reset/password-reset.component.html
@@ -27,7 +27,7 @@
           minlength="6"
           [(ngModel)]="password"
           name="password"
-          placeholder="{{ 'passwordReset.inputfield' | translate }}"
+          placeholder="{{ 'passwordReset.inputField' | translate }}"
           type="password"
           id="message"
           required
@@ -51,7 +51,7 @@
           minlength="6"
           [(ngModel)]="passwordRepeat"
           name="passwordRepeat"
-          placeholder="{{ 'passwordReset.inputfield2' | translate }}"
+          placeholder="{{ 'passwordReset.inputField2' | translate }}"
           id="message"
           type="password"
           required
