update file upload & download

--- a/src/app/components/main-chat/chat-msg-box/chat-msg-box.component.html
+++ b/src/app/components/main-chat/chat-msg-box/chat-msg-box.component.html
@@ -102,7 +102,7 @@
       (click)="sendMessage()"
     />
     }
-    <!--- show chnnels or users by pressing @ or #-->
+    <!--- show channels or users by pressing @ or #-->
     @if (openSmallWindow) {
     <div class="filteredElementWindow2">
       @if (showChannels) { @for (i of checkIfUserHasAccessToChannel(); track
