--- a/src/app/components/main-chat/single-chat/single-chat.component.html
+++ b/src/app/components/main-chat/single-chat/single-chat.component.html
@@ -89,12 +89,12 @@
           <span>{{ "single-chat.edit" | translate }}</span>
           }
         </div>
-        @if(filePath) {
+        @if(chat.attachments) {
         <app-attachments
           [chatId]="chat.id"
           [openOnSecondaryChat]="openOnSecondaryChat"
           [viewWidth]="viewWidth"
-          [filePath]="filePath"
+          [filePath]="chat.attachments"
         ></app-attachments>
         }
       </div>
