--- a/src/app/components/main-chat/show-channel-member/show-channel-member.component.scss
+++ b/src/app/components/main-chat/show-channel-member/show-channel-member.component.scss
@@ -24,7 +24,7 @@
   @include displayFlex($g: 20px);
   flex-direction: column;
 
-  .posiotionHeader {
+  .positionHeader {
     @include displayFlex($j: space-between);
     font-size: 24px;
     font-weight: 600;
@@ -51,7 +51,7 @@
       border-radius: 25px;
     }
 
-    .positionImgs {
+    .positionImg {
       @include displayFlex($a: flex-end);
 
       .avatarImg {
@@ -95,7 +95,7 @@
   border-top-right-radius: 0;
   @include displayFlex($g: 20px);
   flex-direction: column;
-  .posiotionHeader {
+  .positionHeader {
     @include displayFlex($j: space-between, $a: flex-start);
     width: 100%;
     .headline {
@@ -162,7 +162,7 @@
     }
   }
 
-  .inputfieldStyle {
+  .inputFieldStyle {
     width: 100%;
     flex-grow: 1;
     outline: none;
@@ -218,7 +218,7 @@
         border-radius: 25px;
       }
 
-      .positionImgsBox {
+      .positionImgBox {
         @include displayFlex($a: flex-end);
 
         .addAvatarImg {
@@ -243,7 +243,7 @@
   @include displayFlex($j: flex-end);
 }
 
-.furterBtnClass {
+.btnClass {
   width: 120px;
   height: 48px;
   background-color: white;
@@ -278,7 +278,7 @@
     top: 140px;
     right: 20px;
     width: 250px;
-    .posiotionHeader {
+    .positionHeader {
       font-size: 21px;
     }
   }
@@ -288,7 +288,7 @@
     top: 140px;
     right: 20px;
     width: 230px;
-    .posiotionHeader {
+    .positionHeader {
       .headline {
         p {
           font-size: 21px;
@@ -315,7 +315,7 @@
           font-size: 18px;
           font-style: 600;
         }
-        .positionImgsBox {
+        .positionImgBox {
           .addAvatarImg {
             width: 32px;
             height: 32px;
