--- a/src/app/components/main-chat/main-chat.component.scss
+++ b/src/app/components/main-chat/main-chat.component.scss
@@ -181,7 +181,7 @@ section {
       background-color: #edeefe;
       border-radius: 25px;
     }
-    .positionImgs {
+    .positionImg {
       @include displayFlex($a: flex-end);
       .avatarImg {
         width: 40px;
