--- a/src/app/components/main-login/login/login.component.html
+++ b/src/app/components/main-login/login/login.component.html
@@ -75,7 +75,7 @@
 
       <button
         (click)="loginService.googleLogin()"
-        class="googleLogingContainer"
+        class="googleLoggingContainer"
         [disabled]="loginService.isBtnDisabled"
       >
         <img src="./assets/img/login/google.svg" alt="" />
@@ -105,7 +105,7 @@
     <div>
       <span> {{ "login.topText" | translate }}</span>
       <div class="mobileCreateAccountContainer">
-        <span routerLink="/register" class="mobileCreateAccoun">
+        <span routerLink="/register" class="mobileCreateAccount">
           {{ "login.topText2" | translate }}</span
         >
       </div>
