--- a/src/app/components/main-login/login/login.component.scss
+++ b/src/app/components/main-login/login/login.component.scss
@@ -70,7 +70,7 @@ section {
     justify-content: center;
   }
 }
-.googleLogingContainer {
+.googleLoggingContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -149,7 +149,7 @@ button {
   display: flex;
   justify-content: end;
 }
-.mobileCreateAccoun {
+.mobileCreateAccount {
   color: #797ef3;
   cursor: pointer;
   padding: 4px 12px 4px 12px;
@@ -212,7 +212,7 @@ button {
     font-size: 17px;
     margin-bottom: 22px;
   }
-  .googleLogingContainer {
+  .googleLoggingContainer {
     font-size: 17px;
     height: 52px;
     gap: 0;
