--- a/src/app/components/sidebar/show-all-users/show-all-users.component.html
+++ b/src/app/components/sidebar/show-all-users/show-all-users.component.html
@@ -17,7 +17,7 @@
         class="user"
         (click)="checkRoute([user]); closeSecondaryChatAndSidebar()"
       >
-        <div class="positionImgs">
+        <div class="positionImg">
           <img src="{{ user.avatar }}" class="avatarImg" />
           <img
             src="./assets/img/{{
