--- a/src/app/components/sidebar/sidebar-channels/add-new-channel/add-new-channel.component.scss
+++ b/src/app/components/sidebar/sidebar-channels/add-new-channel/add-new-channel.component.scss
@@ -199,7 +199,7 @@ textarea {
         }
       }
     }
-    .inputfieldStyle {
+    .inputFieldStyle {
       width: auto;
       flex-grow: 1;
       outline: none;
@@ -277,7 +277,7 @@ textarea {
         background-color: #edeefe;
         border-radius: 25px;
       }
-      .positionImgs {
+      .positionImg {
         @include displayFlex($a: flex-end);
         .avatarImg {
           width: 40px;
