--- a/src/app/shared/components/header/edit-user/edit-user.component.html
+++ b/src/app/shared/components/header/edit-user/edit-user.component.html
@@ -1,5 +1,5 @@
 <div class="grayBackground" (click)="closeCurrentProfile()"></div>
-@for(i of userService.getCurentUsers(); track i){
+@for(i of userService.getCurrentUsers(); track i){
 <div class="whiteBox">
   <div class="boxHeader">
     <p>Profil</p>
