--- a/src/app/components/sidebar/show-all-users/show-all-users.component.scss
+++ b/src/app/components/sidebar/show-all-users/show-all-users.component.scss
@@ -18,7 +18,6 @@ section {
   padding: 24px;
   @include displayFlex($g: 20px);
   flex-direction: column;
-
   .positionHeader {
     @include displayFlex($j: space-between);
     font-size: 24px;
@@ -34,28 +33,23 @@ section {
   max-height: 300px;
   overflow: auto;
   width: 100%;
-
   .user {
     @include displayFlex($g: 12px);
     padding: 6px;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-
     &:hover {
       background-color: #edeefe;
       border-radius: 25px;
     }
-
-    .positionImgs {
+    .positionImg {
       @include displayFlex($a: flex-end);
-
       .avatarImg {
         width: 40px;
         height: 40px;
         object-fit: cover;
         border-radius: 50%;
       }
-
       .onlineIcon {
         width: 12px;
         height: 12px;
