--- a/src/app/components/sidebar/sidebar-channels/sidebar-channels.component.html
+++ b/src/app/components/sidebar/sidebar-channels/sidebar-channels.component.html
@@ -26,7 +26,7 @@
     class="boxOfAllChannels"
     [ngClass]="{
       hideAllChannels: !minimizeChannels,
-      showAllChanneld: minimizeChannels
+      showAllChannels: minimizeChannels
     }"
   >
     @for (channel of getChannels(); track channel) {
