--- a/src/app/shared/components/header/search-bar/search-bar.component.html
+++ b/src/app/shared/components/header/search-bar/search-bar.component.html
@@ -66,7 +66,7 @@
       <div class="channelAnswers">
         @for (chat of filteredChats; track chat) {
         <div class="answersBoxChats">
-          <p class="threadNmae">[ {{ getChannel(chat.channelId) }} ]</p>
+          <p class="threadName">[ {{ getChannel(chat.channelId) }} ]</p>
           <div class="threadContentBox">
             <p
               class="threadContent"
