--- a/src/app/components/main-chat/chat-msg-box/chat-msg-box.component.html
+++ b/src/app/components/main-chat/chat-msg-box/chat-msg-box.component.html
@@ -44,7 +44,8 @@
         [imgSize]="'16px'"
         [btnSize]="'24px'"
         [btnBgHoverColor]="'#edeefe'"
-        (click)="fileInput.click()"
+        [disable]="downloadFilesService.uploadFiles.length >= 1"
+        (click)="handleFileInputClick()"
       ></app-small-btn>
       <img class="verticalLine" src="./assets/img/verticalLine.svg" />
       <app-small-btn
@@ -63,20 +64,15 @@
         (click)="targetChatUser($event)"
       ></app-small-btn>
       <!-- Warning message -->
-      @if (downloadFilesService.uploadFiles.length >= 1 && !fileDataError &&
-      !fileSizeError){
-      <p class="warningMessage">
-        {{ "channel-msg-box.text0" | translate }}
-      </p>
-      } @if(fileDataError){
+      @if(fileDataError){
       <p class="warningMessage">
         {{ "channel-msg-box.text1" | translate }}
       </p>
-      } @if(fileSizeError){
+      } @else { @if(fileSizeError){
       <p class="warningMessage">
         {{ "channel-msg-box.text2" | translate }}
       </p>
-      }
+      } }
       <div class="filteredElementWindow">
         @if (toggleBoolean.selectUserInMsgBox) {
         <div class="positionOfAllUsersInBox">
