Fix: Images were displayed black in the options menu

--- a/src/app/components/main-chat/single-chat/options-menu/options-menu.component.html
+++ b/src/app/components/main-chat/single-chat/options-menu/options-menu.component.html
@@ -9,6 +9,7 @@
       [imgSize]="viewWidth >= RESPONSIVE_THRESHOLD_MOBILE ? '24px' : '17px'"
       [btnSize]="viewWidth >= RESPONSIVE_THRESHOLD_MOBILE ? '36px' : '25px'"
       [imgFilter]="'none'"
+      [imgFilterStatic]="'none'"
       [btnBgHoverColor]="'#edeefe'"
       [ngClass]="{ mirror: user.id === userService.getCurrentUserId() }"
       (click)="addReactionIcon('okay', currentChat)"
@@ -19,6 +20,7 @@
       [imgSize]="viewWidth >= RESPONSIVE_THRESHOLD_MOBILE ? '24px' : '17px'"
       [btnSize]="viewWidth >= RESPONSIVE_THRESHOLD_MOBILE ? '36px' : '25px'"
       [imgFilter]="'none'"
+      [imgFilterStatic]="'none'"
       [btnBgHoverColor]="'#edeefe'"
       [ngClass]="{ mirror: user.id === userService.getCurrentUserId() }"
       (click)="addReactionIcon('clap-hands', currentChat)"
@@ -76,6 +78,7 @@
       [imgSize]="viewWidth >= RESPONSIVE_THRESHOLD_MOBILE ? '24px' : '17px'"
       [btnSize]="viewWidth >= RESPONSIVE_THRESHOLD_MOBILE ? '36px' : '25px'"
       [imgFilter]="'none'"
+      [imgFilterStatic]="'none'"
       [btnBgHoverColor]="'#edeefe'"
       [ngClass]="{ mirror: user.id === userService.getCurrentUserId() }"
       (click)="addReactionIcon('okay', currentChat)"
@@ -86,6 +89,7 @@
       [imgSize]="viewWidth >= RESPONSIVE_THRESHOLD_MOBILE ? '24px' : '17px'"
       [btnSize]="viewWidth >= RESPONSIVE_THRESHOLD_MOBILE ? '36px' : '25px'"
       [imgFilter]="'none'"
+      [imgFilterStatic]="'none'"
       [btnBgHoverColor]="'#edeefe'"
       [ngClass]="{ mirror: user.id === userService.getCurrentUserId() }"
       (click)="addReactionIcon('clap-hands', currentChat)"
