--- a/src/app/shared/components/small-btn/small-btn.component.html
+++ b/src/app/shared/components/small-btn/small-btn.component.html
@@ -12,7 +12,8 @@
     [ngStyle]="{
       width: imgSize,
       height: imgSize,
-      '--filter': imgFilter
+      '--filter': imgFilter,
+      '--filterStatic': imgFilterStatic
     }"
     [src]="'assets/img/' + imgSrc"
     alt=""
