Fix: Buttons were not hidden when the menu was retracted

--- a/src/app/components/sidebar/sidebar-channels/sidebar-channels.component.html
+++ b/src/app/components/sidebar/sidebar-channels/sidebar-channels.component.html
@@ -18,6 +18,7 @@
         [btnBgHoverColor]="'#edeefe'"
         (click)="openAddChannelWindow()"
         style="margin-right: -11px"
+        [imgFilterStatic]="'none'"
       >
       </app-small-btn>
     </div>
