--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -20,6 +20,7 @@
         style="margin-right: -26px"
         routerLink="/main/searchBar"
         (click)="closeSecondaryChatAndSidebar()"
+        [imgFilterStatic]="'none'"
       >
       </app-small-btn>
     </div>
