--- a/src/app/shared/components/small-btn/small-btn.component.html
+++ b/src/app/shared/components/small-btn/small-btn.component.html
@@ -13,7 +13,7 @@
       width: imgSize,
       height: imgSize,
       '--filter': imgFilter,
-      '--filterStatic': imgFilterStatic
+      '--filterStatic': imgFilterStatic,
     }"
     [src]="'assets/img/' + imgSrc"
     alt=""
