--- a/src/app/components/sidebar/sidebar-direct-messages/sidebar-direct-messages.component.html
+++ b/src/app/components/sidebar/sidebar-direct-messages/sidebar-direct-messages.component.html
@@ -19,6 +19,7 @@
         [btnBgHoverColor]="'#edeefe'"
         (click)="toggleAllUsersWindow()"
         style="margin-right: -11px"
+        [imgFilterStatic]="'none'"
       >
       </app-small-btn>
     </div>
