--- a/src/app/components/main-chat/channel-information/channel-information.component.scss
+++ b/src/app/components/main-chat/channel-information/channel-information.component.scss
@@ -20,6 +20,10 @@
     left: 460px;
     height: fit-content;
     overflow: none;
+    .content {
+      overflow: auto;
+      max-height: 580px;
+    }
   }
 }
 
