add new "btn-large" component and move "btn-small" to buttons folder

--- a/src/app/components/main-chat/channel-information/channel-information.component.scss
+++ b/src/app/components/main-chat/channel-information/channel-information.component.scss
@@ -21,6 +21,7 @@
     height: fit-content;
     overflow: none;
     .content {
+      padding-right: 8px;
       overflow: auto;
       max-height: 580px;
     }
