fix: disable ability to leave publicChannels

--- a/src/app/components/main-chat/channel-information/channel-information.component.html
+++ b/src/app/components/main-chat/channel-information/channel-information.component.html
@@ -159,6 +159,7 @@
         [openUserWindowBoolean]="openUserWindowBoolean"
         (closeUserWindow)="changeOpenUserWindowBoolean($event)"
       ></app-open-send-prv-message-window>
+      @if (!publicChannelsList.includes(currentChannel)) {
       <div class="leaveChannel">
         <button
           [disabled]="openEditNameInput || openEditNameDescription"
@@ -167,6 +168,7 @@
           {{ "channel-information.leave" | translate }}
         </button>
       </div>
+      }
     </div>
   </div>
 </div>
